--- a/public/css/StyleApp.css
+++ b/public/css/StyleApp.css
@@ -89,7 +89,7 @@ div.hide {
     max-width: 80%;
     min-width: 50%;
     font-size: 60px;
-    color: #FFF;
+    color: #000000;
     vertical-align: middle;
     line-height: 1.3;
     overflow: hidden;
